[gd_scene format=3 uid="uid://kxhsm77efia6"]

[ext_resource type="Script" uid="uid://dea41c5qbejgi" path="res://orco_de_batalla.gd" id="1_lfvi7"]
[ext_resource type="Texture2D" uid="uid://8k11t4ovo4tc" path="res://Characters(100x100)/Orc/Orc/Orc-Idle.png" id="2_m61sq"]
[ext_resource type="Texture2D" uid="uid://tb4s18wgxqtn" path="res://Flecha/Pixelart arrow icon pack 1.0.png" id="3_dybol"]

[sub_resource type="Animation" id="Animation_vmaqc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.8288101, 2.7193873e-06, 5.7756904e-07, 1)]
}

[sub_resource type="Animation" id="Animation_8grbx"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4, 0), Vector2(-4, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.8288101, 2.7193873e-06, 5.7756904e-07, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r22ik"]
_data = {
&"RESET": SubResource("Animation_vmaqc"),
&"damage": SubResource("Animation_8grbx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwxjg"]
size = Vector2(213.5625, 137.3125)

[node name="Orco_de_batalla" type="Node2D" unique_id=751464489]
script = ExtResource("1_lfvi7")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=889867227]
position = Vector2(-5, -59.000015)
scale = Vector2(8.64953, 8.64953)
texture = ExtResource("2_m61sq")
hframes = 6

[node name="Node2D" type="Node2D" parent="." unique_id=1795068784]
visible = false
modulate = Color(0.8288101, 2.7193873e-06, 5.7756904e-07, 1)
position = Vector2(-4, -48)
scale = Vector2(3.7849998, 3.7849998)

[node name="Label" type="Label" parent="Node2D" unique_id=498607570]
offset_left = 4.227213
offset_top = -52.57596
offset_right = 14.795244
offset_bottom = -29.575958
text = "2"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=431190011]
libraries/ = SubResource("AnimationLibrary_r22ik")

[node name="ProgressBar" type="ProgressBar" parent="." unique_id=75425158]
offset_left = -64.0
offset_top = -164.0
offset_right = 109.0
offset_bottom = -138.0
show_percentage = false

[node name="Cursor" type="Sprite2D" parent="." unique_id=160720928]
visible = false
position = Vector2(218, -75)
rotation = -1.5707964
scale = Vector2(6.321063, 6.321063)
texture = ExtResource("3_dybol")
hframes = 11
vframes = 20
frame = 11

[node name="Area2D" type="Area2D" parent="." unique_id=1723941732]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=1274082550]
position = Vector2(31, -68)
shape = SubResource("RectangleShape2D_jwxjg")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
